# python-vaultwarden

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: ci.yml  deploy-release.yml
src/vaultwarden/: __version__.py
src/vaultwarden/clients/: bitwarden.py  old-client.py  vaultwarden.py
src/vaultwarden/models/: api_models.py  bitwarden.py  enum.py  exception_models.py  permissive_model.py  sync.py  vaultwarden.py
src/vaultwarden/utils/: crypto.py  logger.py  string_cases.py  tools.py
tests/e2e/: .env  compose.yaml  docker_helper.py  run_tests.sh  test_bitwarden.py  test_vaultwarden.py
tests/fixtures/admin/: users_camel.json  users_pascal.json
tests/fixtures/server/: db.sqlite3  rsa_key.pem
tests/fixtures/test-account/: sync_camel.json  sync_pascal.json
tests/fixtures/test-account-2/: organization_profile_camel.json  profile_camel.json  sync_camel.json
tests/fixtures/test-account-3/: sync_camel.json  sync_pascal.json
tests/fixtures/test-accout-3/: profile_camel.json
tests/fixtures/test-organization/: organization_camel.json  organization_pascal.json  users_camel.json
tests/fixtures/test-organization/collections/: collections_camel.json  collections_pascal.json
tests/fixtures/test-organization/collections/test-collection/: details_camel.json
tests/fixtures/test-organization/collections/test-collection-2/: details_camel.json  users_camel.json
tests/integration/: test_bitwarden.py  test_vaultwarden.py
tests/models/: vaultwarden_user.py
tests/models/validation/: test_bitwarden_models.py  test_pascal_camel_cases.py  test_sync_models.py  test_vaultwarden_models.py
tests/utils/: test_tools.py
vaultwarden/clients/: bitwarden.py  vaultwarden.py
vaultwarden/models/: api_models.py  exception_models.py
