[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-vaultwarden"
version = "1.0.0"
description = "Admin Vaultwarden and Simple Bitwarden Python Client"
authors = [
    { name = "Lyonel Martinez", email = "lyonel.martinez@numberly.com" },
    { name = "Mathis Ribet", email = "mathis.ribet@numberly.com" },
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/numberly/python-vaultwarden"
documentation = "https://numberly.github.io/python-vaultwarden/"
packages = [
    { include = "vaultwarden", from = "src" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
    "Topic :: Internet :: WWW/HTTP"
]
requires-python = ">=3.10"
dependencies = [
    "hkdf >=0.0.3",
    "pycryptodome >=3.17.0",
    "pydantic >=2.5.0",
    "httpx >=0.24.1",
]

[tool.hatch.version]
path = "src/vaultwarden/__version__.py"

[tool.hatch.build]
packages = [
    "src/vaultwarden",
]
include = [
    "/tests",
]

[tool.hatch.build.targets.sdist]
include = ["/src/vaultwarden/**/*.py"]
[tool.hatch.build.targets.wheel]
packages = [
    "src/vaultwarden",
]

[tool.hatch.envs.test]
dependencies = [
    "coverage",
]

[tool.hatch.envs.test.scripts]
test = "coverage run --source=src/vaultwarden -m unittest discover -p 'test_*.py' tests --top-level-directory ."
_coverage = ["test", "coverage xml", "coverage report --show-missing"]
with-coverage = "test"
[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11"]
type = ["default"]
[tool.hatch.envs.test.overrides]
matrix.type.scripts = [
    { key = "with-coverage", value = "_coverage", if = ["default"] },
]

[tool.hatch.envs.types]
dependencies = [
    "mypy",
    "types-PyYAML",
    "types-setuptools",
    "typing-extensions",
]
[tool.hatch.envs.types.scripts]
check = "mypy src/vaultwarden"

[tool.hatch.envs.style]
detached = true
dependencies = [
    "black",
    "isort",
    "ruff",
]
[tool.hatch.envs.style.scripts]
lint = [
    "ruff check --fix src/vaultwarden",
]
check = [
    "isort --check-only --diff src/vaultwarden",
    "black -q --check --diff src/vaultwarden",
    "ruff check src/vaultwarden",
]
format = [
    "isort -q src/vaultwarden",
    "black -q src/vaultwarden",
    "lint"
]

[tool.ruff]
# Add "Q" to the list of enabled codes.
select = ["B", "E", "F", "I", "N", "Q", "RUF", "SIM", "TCH"]
ignore = ["N815"]
fixable = ["ALL"]
src = ["src/vaultwarden", "tests"]
exclude = ["src/vaultwarden/utils/crypto.py"]
target-version = "py310"
line-length = 79

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["typer.Argument"]

[tool.ruff.isort]
force-sort-within-sections = true

[tool.black]
line-length = 79
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
ignore_missing_imports = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true

[tool.commitizen]
version = "1.0.0"
tag_format = "$version"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml",
    "src/vaultwarden/__version__.py",
]
