[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-vaultwarden"
version = "1.0.4"
description = "Admin Vaultwarden and Simple Bitwarden Python Client"
authors = [
    { name = "Lyonel Martinez", email = "lyonel.martinez@numberly.com" },
    { name = "Mathis Ribet", email = "mathis.ribet@numberly.com" },
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/numberly/python-vaultwarden"
documentation = "https://numberly.github.io/python-vaultwarden/"
packages = [
    { include = "vaultwarden", from = "src" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
    "Topic :: Internet :: WWW/HTTP"
]
requires-python = ">=3.10"
dependencies = [
    "hkdf >=0.0.3",
    "pycryptodome >=3.17.0",
    "pydantic >=2.5.0",
    "httpx >=0.24.1",
]
[dev-dependencies]
test = [
  "hatch~=1.12",
  "pytest~=8.3",
]

[tool.hatch.version]
path = "src/vaultwarden/__version__.py"

[tool.hatch.build]
packages = [
    "src/vaultwarden",
]
include = [
    "/tests",
]

[tool.hatch.build.targets.sdist]
include = ["/src/vaultwarden/**/*.py"]
[tool.hatch.build.targets.wheel]
packages = [
    "src/vaultwarden",
]

[tool.hatch.envs.test]
dependencies = [
    "coverage",
]

[tool.hatch.envs.test.scripts]
test = "coverage run --source=src/vaultwarden -m unittest discover -p 'test_*.py' tests --top-level-directory ."
_coverage = ["test", "coverage xml", "coverage report --show-missing"]
with-coverage = "test"
[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]
type = ["default"]
[tool.hatch.envs.test.overrides]
matrix.type.scripts = [
    { key = "with-coverage", value = "_coverage", if = ["default"] },
]

[tool.hatch.envs.types]
dependencies = [
    "mypy",
    "types-PyYAML",
    "types-setuptools",
    "typing-extensions",
]
[tool.hatch.envs.types.scripts]
check = "mypy src/vaultwarden"

[tool.hatch.envs.style]
detached = true
dependencies = [
    "ruff",
]
[tool.hatch.envs.style.scripts]
lint = [
    "ruff check --fix src/vaultwarden tests",
]
check = [
    "ruff check src/vaultwarden tests",
    "ruff format --check src/vaultwarden tests",
]
format = [
    "ruff format src/vaultwarden tests",
    "lint",
]

[tool.ruff]
src = ["src/vaultwarden", "tests"]
exclude = ["src/vaultwarden/utils/crypto.py"]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
# Add "Q" to the list of enabled codes.
select = ["B", "E", "F", "I", "N", "Q", "RUF", "SIM", "TCH"]
ignore = ["N815"]
fixable = ["ALL"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true
plugins = [
  "pydantic.mypy"
]

[tool.commitizen]
version = "1.0.4"
tag_format = "$version"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml",
    "src/vaultwarden/__version__.py",
]
